--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,13 @@
     <meta
       name="description"
       content="Web site created using create-react-app"
-    />    
+    />
     <title>InstaVerse</title>
+    <link
+      rel="icon"
+      href="https://tse2.mm.bing.net/th?id=OIP.91kMUobMQ6lwJYCkJNdYgQAAAA&pid=Api&P=0&h=180"
+      type="image/x-icon"
+    />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
