Add: added site description

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Instaverse is a reliable and feature-rich social media application designed to foster genuine connections, inspire creativity, and provide a seamless user experience across devices. Join the Instaverse community today and experience a new era of social media connectivity, where responsive design meets limitless possibilities."
     />
     <title>InstaVerse</title>
     <link
